--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       crossorigin="anonymous"
     />
 
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>西塘草舍农场</title>
   </head>
 
