--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,13 @@
       crossorigin="anonymous"
     />
 
+    <!-- 阿里图标库 -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://at.alicdn.com/t/font_1650364_16scgtav2pl.css"
+    />
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>西塘草舍农场</title>
   </head>
