--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://at.alicdn.com/t/font_1650364_16scgtav2pl.css"
+      href="http://at.alicdn.com/t/font_1650364_tfubo12owi.css"
     />
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
@@ -34,7 +34,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
@@ -48,6 +48,6 @@
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
       integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
   </body>
 </html>
